# MediaPacket

./: .gitignore  README.md  local.properties  settings.gradle.kts
FFmplayer/: build.gradle.kts
FFmplayer/src/main/: AndroidManifest.xml
FFmplayer/src/main/cpp/: CMakeLists.txt  Ffmpeg_player.cpp  Ffmpeg_player.h  ffmplayer.cpp  ffmplayer_android.cpp  opensl_audio.cpp  opensl_audio.h  player_java_call.cpp  player_java_call.h  player_queue.cpp  player_queue.h  player_status.cpp  player_status.h
FFmplayer/src/main/cpp/include/libffmpeg/: config.h
FFmplayer/src/main/res/layout/: activity_main.xml  activity_welcom.xml
FFmplayer/src/main/res/values/: strings.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  AndroidManifest_target.xml
app/src/main/res/values/: themes.xml
audio/: build.gradle.kts
audio/src/main/: AndroidManifest.xml
audio/src/main/cpp/: nativelib.cpp
audio/src/main/res/layout/: activity_pcm_murge.xml
audio/src/main/res/values/: strings.xml  themes.xml
baseCommon/: build.gradle.kts
baseCommon/src/main/res/layout/: activity_welcom.xml  t_loading.xml
cameracature/: build.gradle.kts
commonLib/: build.gradle.kts
ffmplay/: build.gradle.kts
ffmplay/src/main/: AndroidManifest.xml
gradle/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle.kts
nativelib/src/main/cpp/: nativelib.cpp
opencv/: build.gradle.kts
opencv/src/main/: AndroidManifest.xml
opencv/src/main/cpp/: CMakeLists.txt  android_log.h  opencv_jni.cpp  opencv_jni.h
protocol/: .gitignore  build.gradle.kts
protocol/src/main/cpp/: CMakeLists.txt  protocol.cpp
screenProjectPush/: build.gradle.kts
screenProjectPush/src/main/: AndroidManifest_target.xml
screenprojectfetch/: build.gradle.kts
screenprojectfetch/src/main/: AndroidManifest.xml  AndroidManifest_target.xml
screenprojection/: build.gradle.kts
trim/src/main/: AndroidManifest.xml
video/: build.gradle.kts
video/src/main/: AndroidManifest.xml  AndroidManifest_target.xml
video/src/main/cpp/: CMakeLists.txt  android_log.h  base_interface.cpp  base_interface.h  filter_interface.cpp  filter_interface.h  media_util_jni.cpp  media_util_jni.h  mythread.cpp  mythread.h  nativelib.cpp  video_concat.cpp  video_concat.h  video_reverse.cpp  video_reverse.h  video_speed.cpp  video_speed.h  video_trim.cpp  video_trim.h
videocall/: build.gradle.kts
videocall/src/main/: AndroidManifest.xml
(+121 files in other folders)
